# tomator

./: .gitignore  AUTHORS  Installation.html  README.md  RF power.html  Usage.html  genindex.html  index.html  search.html
BatchFiles/: ITERcl_west_joe.batch
SLURMFiles/: SLURM.leuven
src/: CMakeLists.txt  ITERcl_aug.batch  ITERcl_tomas_elise.batch  Makefile  PlotterInterface.py  SimulationInterface.py  Tomator1D.cpp  rfmod5b-lpp2-TW.f90  setup.csh  unit_tests.sh
src/Data/Test/: output.csv
src/Funcs/: collisions.cpp  collisions.h  coupledBICWC.cpp  coupledBTOMAS.cpp  coupledBfixpowerfrac.cpp  coupledBgray.cpp  coupledBicatlhr.cpp  coupledBkipt.cpp  coupledBmanuel.cpp  coupledBnefix.cpp  coupledBnopower.cpp  coupledBproptone.cpp  coupledBram.cpp  coupledpower.cpp  coupledpower.h  extractor.cpp  extractor.h  fileHandler.cpp  fileHandler.h  functions.cpp  functions.h  meanfilter.cpp  meanfilter.h  solver.cpp  solver.h  timeStep.cpp  timeStep.h  transport.cpp  transport.h
src/InterfaceFuncs/: ChooseParameters.py  SimulationSimulator.py  plot_app.py
src/MatlabScripts/: Plot_LHR_WEST.m  Plot_LHR_WEST_daniel.m  WestHtoHD0.mat
src/SimParams/Public/: TCV5151X_fixneDV.json  TCV5151X_fixne_tunDV.json  TOMAS_Elise.json  TOMAS_Elise_fixPRFe.json  WEST_0.02HtoHD_3.8T_48MHz.json  WEST_0.9HtoHD_3.2T_48MHz.json
src/Vars/: constants.c  constants.h  datastructures.h  globalVariables.cpp  globalVariables.h  graydat.c  graydat.h  matrixh.h  positions.cpp  positions.h  reactionrates.cpp  reactionrates.h  simparam.cpp  simparam.h  solverVariables.cpp  solverVariables.h
(+33 files in other folders)
